force-app/main/default/objects/Contact/fields/Makler_E_Mail__c.field-meta.xml
<CustomField>
    <fullName>Makler_E_Mail__c</fullName>
    <label>E-Mail übergeordneter Betreuer</label>
    <type>Email</type>
</CustomField>