force-app/main/default/objects/Contact/fields/Maklerauftrag__c.field-meta.xml
<CustomField>
    <fullName>Maklerauftrag__c</fullName>
    <formula>IF(Account.Carestone_Vertriebsvereinbarung__c, &apos;Maklerauftrag beidseitig unterzeichnet&apos;,
TEXT(Account.WHS_Maklerauftrag__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maklerauftrag</label>
    <type>Text</type>
</CustomField>