force-app/main/default/objects/Contact/fields/MaklerBetreuer_E_Mail__c.field-meta.xml
<CustomField>
    <fullName>MaklerBetreuer_E_Mail__c</fullName>
    <label>MaklerBetreuer E-Mail</label>
    <type>Email</type>
</CustomField>