force-app/main/default/objects/Contact/fields/Maklerschutz_besteht__c.field-meta.xml
<CustomField>
    <fullName>Maklerschutz_besteht__c</fullName>
    <formula>if(INCLUDES(Gesch_ftsbeziehung__c, &quot;Versicherungsmakler&quot;) || INCLUDES(Gesch_ftsbeziehung__c, &quot;Immobilienmakler&quot;) || INCLUDES(Gesch_ftsbeziehung__c, &quot;Immobilien- oder Versicherungsmakler&quot;) || INCLUDES(Gesch_ftsbeziehung__c, &quot;Finanz- und Versicherungsmakler&quot;) || INCLUDES(Gesch_ftsbeziehung__c, &quot;Finanzmakler&quot;), Account.Maklerschutz_besteht__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Liegt auf der Accountebene</inlineHelpText>
    <label>Maklerschutz besteht</label>
    <type>Checkbox</type>
</CustomField>