force-app/main/default/objects/Contact/fields/Maklerschutz_bis__c.field-meta.xml
<CustomField>
    <fullName>Maklerschutz_bis__c</fullName>
    <formula>if(INCLUDES(Gesch_ftsbeziehung__c, &quot;Versicherungsmakler&quot;) || INCLUDES(Gesch_ftsbeziehung__c, &quot;Immobilienmakler&quot;) || INCLUDES(Gesch_ftsbeziehung__c, &quot;Immobilien- oder Versicherungsmakler&quot;) || INCLUDES(Gesch_ftsbeziehung__c, &quot;Finanz- und Versicherungsmakler&quot;) || INCLUDES(Gesch_ftsbeziehung__c, &quot;Finanzmakler&quot;), Account.Maklerschutz_bis__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maklerschutz bis</label>
    <type>DateTime</type>
</CustomField>