force-app/main/default/objects/Contact/fields/Maklerstatus_2015__c.field-meta.xml
<CustomField>
    <fullName>Maklerstatus_2015__c</fullName>
    <formula>if(NOT(INCLUDES(Gesch_ftsbeziehung__c, &apos;Interessent&apos;)) &amp;&amp; NOT(INCLUDES(Gesch_ftsbeziehung__c, &apos;Kunde&apos;)),  TEXT(Account.WHS_Maklerauftrag__c), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maklerstatus</label>
    <type>Text</type>
</CustomField>