force-app/main/default/objects/Contact/fields/Maklervertrag_g_ltig_seit__c.field-meta.xml
<CustomField>
    <fullName>Maklervertrag_g_ltig_seit__c</fullName>
    <label>Maklervertrag gültig seit</label>
    <type>Date</type>
</CustomField>