force-app/main/default/objects/Contact/fields/Maklervertrag_verschickt_am__c.field-meta.xml
<CustomField>
    <fullName>Maklervertrag_verschickt_am__c</fullName>
    <label>Maklervertrag verschickt am</label>
    <type>DateTime</type>
</CustomField>