force-app/main/default/objects/Contact/fields/Meeting__c.field-meta.xml
<CustomField>
    <fullName>Meeting__c</fullName>
    <label>Meeting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Kundenveranstaltung teilgenommen</fullName>
            </value>
            <value>
                <fullName>Termin/Beratung</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>