force-app/main/default/objects/Contact/fields/Nebenjob__c.field-meta.xml
<CustomField>
    <fullName>Nebenjob__c</fullName>
    <label>Nebenjob</label>
    <length>255</length>
    <type>Text</type>
</CustomField>