force-app/main/default/objects/Contact/fields/NebenjobArbeitgeberInOrt__c.field-meta.xml
<CustomField>
    <fullName>NebenjobArbeitgeberInOrt__c</fullName>
    <label>Nebenjob Arbeitgeber/in Ort</label>
    <length>255</length>
    <type>Text</type>
</CustomField>