force-app/main/default/objects/Contact/fields/NebenjobIstBefristet__c.field-meta.xml
<CustomField>
    <fullName>NebenjobIstBefristet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nebenjob ist befristet</label>
    <type>Checkbox</type>
</CustomField>