force-app/main/default/objects/Contact/fields/NebenjobSeit__c.field-meta.xml
<CustomField>
    <fullName>NebenjobSeit__c</fullName>
    <label>Nebenjob seit</label>
    <type>Date</type>
</CustomField>