force-app/main/default/objects/Contact/fields/NotarBewertung__c.field-meta.xml
<CustomField>
    <fullName>NotarBewertung__c</fullName>
    <label>Notar Bewertung</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rot</fullName>
            </value>
            <value>
                <fullName>Gelb</fullName>
            </value>
            <value>
                <fullName>Grün</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>