force-app/main/default/objects/Contact/fields/NotarBewertungAmpel__c.field-meta.xml
<CustomField>
    <fullName>NotarBewertungAmpel__c</fullName>
    <formula>IMAGE(
CASE(NotarBewertung__c,
&quot;Grün&quot;, &quot;/img/samples/light_green.gif&quot;,
&quot;Gelb&quot;, &quot;/img/samples/light_yellow.gif&quot;,
&quot;Rot&quot;, &quot;/img/samples/light_red.gif&quot;,
&quot;/s.gif&quot;),
&quot;Status Farbe&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notar Bewertung (Ampel)</label>
    <type>Text</type>
</CustomField>