force-app/main/default/objects/Contact/fields/Objektinteresse__c.field-meta.xml
<CustomField>
    <fullName>Objektinteresse__c</fullName>
    <label>Objektinteresse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>