force-app/main/default/objects/Contact/fields/Objektliste_abbestellen__c.field-meta.xml
<CustomField>
    <fullName>Objektliste_abbestellen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E-Mail Objektliste abbestellen</label>
    <type>Checkbox</type>
</CustomField>