force-app/main/default/objects/Contact/fields/Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Opt_In__c</fullName>
    <label>Opt-In</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Nicht Vorhanden</fullName>
                <default>true</default>
                <label>Nicht Vorhanden</label>
            </value>
            <value>
                <fullName>Vorhanden</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>