force-app/main/default/objects/Contact/fields/PasswortVergessenToken__c.field-meta.xml
<CustomField>
    <fullName>PasswortVergessenToken__c</fullName>
    <label>Passwort vergessen token</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>