force-app/main/default/objects/Contact/fields/PasswortZuruecksetzenCode__c.field-meta.xml
<CustomField>
    <fullName>PasswortZuruecksetzenCode__c</fullName>
    <label>Passwort zurücksetzen Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>