force-app/main/default/objects/Contact/fields/Position_Abteilung__c.field-meta.xml
<CustomField>
    <fullName>Position_Abteilung__c</fullName>
    <description>Hier soll die Position (vor allem Geschäftsführung/Inhaber) oder eine Abteilung angeben werden, um später besser selektieren zu können</description>
    <inlineHelpText>Bitte mindestens eine Position/Zuordnung (z.B. Geschäftsführer) auswählen</inlineHelpText>
    <label>Position/Abteilung</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Privatperson (ohne Firma)</fullName>
                <default>true</default>
                <label>Privatperson (ohne Firma)</label>
            </value>
            <value>
                <fullName>------------------------------------</fullName>
            </value>
            <value>
                <fullName>Firmeninhaber</fullName>
            </value>
            <value>
                <fullName>Primärer Ansprechpartner</fullName>
            </value>
            <value>
                <fullName>Geschäftsführer/Vorstand</fullName>
            </value>
            <value>
                <fullName>Leitender Angestellter</fullName>
            </value>
            <value>
                <fullName>Vertriebsleiter</fullName>
            </value>
            <value>
                <fullName>Vertrieb</fullName>
            </value>
            <value>
                <fullName>Sachbearbeiter</fullName>
            </value>
            <value>
                <fullName>Buchhaltung</fullName>
            </value>
            <value>
                <fullName>Kundenservice</fullName>
            </value>
            <value>
                <fullName>Assistenz</fullName>
            </value>
            <value>
                <fullName>Sonstige</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>