force-app/main/default/objects/Contact/fields/ProbezeitBis__c.field-meta.xml
<CustomField>
    <fullName>ProbezeitBis__c</fullName>
    <label>Probezeit bis</label>
    <type>Date</type>
</CustomField>