force-app/main/default/objects/Contact/fields/ProfilfotoUrl__c.field-meta.xml
<CustomField>
    <fullName>ProfilfotoUrl__c</fullName>
    <label>Profilfoto Url</label>
    <type>Url</type>
</CustomField>