force-app/main/default/objects/Contact/fields/RechnerVideoGesehen__c.field-meta.xml
<CustomField>
    <fullName>RechnerVideoGesehen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rechner Video gesehen</label>
    <type>Checkbox</type>
</CustomField>