force-app/main/default/objects/Contact/fields/RolleVertriebsportal__c.field-meta.xml
<CustomField>
    <fullName>RolleVertriebsportal__c</fullName>
    <label>Rolle Vertriebsportal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finanzierungsberater</fullName>
            </value>
            <value>
                <fullName>Vertriebskoordinator</fullName>
            </value>
            <value>
                <fullName>Maklerbetreuer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>