force-app/main/default/objects/Contact/fields/Schutz_Verl_ngerung__c.field-meta.xml
<CustomField>
    <fullName>Schutz_Verl_ngerung__c</fullName>
    <label>Schutz Verlängerung</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Genehmigen</fullName>
            </value>
            <value>
                <fullName>Ablehnen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>