force-app/main/default/objects/Contact/fields/Schutz_Verl_ngerung_beantragen__c.field-meta.xml
<CustomField>
    <fullName>Schutz_Verl_ngerung_beantragen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Schutz Verlängerung beantragen</label>
    <type>Checkbox</type>
</CustomField>