force-app/main/default/objects/Contact/fields/Schutz_Verl_ngerung_Zeitraum__c.field-meta.xml
<CustomField>
    <fullName>Schutz_Verl_ngerung_Zeitraum__c</fullName>
    <label>Schutz Verlängerung Zeitraum in W</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <default>true</default>
                <label>2</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>