force-app/main/default/objects/Contact/fields/Skip_Duplicate_Check__c.field-meta.xml
<CustomField>
    <fullName>Skip_Duplicate_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Duplicate Check</label>
    <type>Checkbox</type>
</CustomField>