force-app/main/default/objects/Contact/fields/Steuer_ID__c.field-meta.xml
<CustomField>
    <fullName>Steuer_ID__c</fullName>
    <label>Steuer-ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>