force-app/main/default/objects/Contact/fields/Steuernummer__c.field-meta.xml
<CustomField>
    <fullName>Steuernummer__c</fullName>
    <label>Steuernummer</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>