force-app/main/default/objects/Contact/fields/SWIFT__c.field-meta.xml
<CustomField>
    <fullName>SWIFT__c</fullName>
    <label>SWIFT</label>
    <length>30</length>
    <type>Text</type>
</CustomField>