force-app/main/default/objects/Contact/fields/Titel__c.field-meta.xml
<CustomField>
    <fullName>Titel__c</fullName>
    <label>Titel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dr.</fullName>
            </value>
            <value>
                <fullName>Prof.</fullName>
            </value>
            <value>
                <fullName>Prof. Dr.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>