force-app/main/default/objects/Contact/fields/Vertriebskontakt_verboten_Interessent__c.field-meta.xml
<CustomField>
    <fullName>Vertriebskontakt_verboten_Interessent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vertriebskontakt verboten - Interessent</label>
    <type>Checkbox</type>
</CustomField>