force-app/main/default/objects/Contact/fields/Vertriebskontakt_verboten_Makler__c.field-meta.xml
<CustomField>
    <fullName>Vertriebskontakt_verboten_Makler__c</fullName>
    <formula>IF( !INCLUDES(Gesch_ftsbeziehung__c, &apos;Interessent&apos;) &amp;&amp; !INCLUDES(Gesch_ftsbeziehung__c, &apos;Kunde&apos;), Account.Vertriebskontakt_verboten_Makler__c, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vertriebskontakt verboten - Makler</label>
    <type>Checkbox</type>
</CustomField>