force-app/main/default/objects/Contact/fields/VertriebsportalFotoUrl__c.field-meta.xml
<CustomField>
    <fullName>VertriebsportalFotoUrl__c</fullName>
    <label>Vertriebsportal Foto Link</label>
    <type>Url</type>
</CustomField>