force-app/main/default/objects/Contact/fields/VPBenutzerId__c.field-meta.xml
<CustomField>
    <fullName>VPBenutzerId__c</fullName>
    <externalId>true</externalId>
    <label>VP Benutzer Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>