force-app/main/default/objects/Contact/fields/VPBenutzerLetzterLogin__c.field-meta.xml
<CustomField>
    <fullName>VPBenutzerLetzterLogin__c</fullName>
    <label>VP Benutzer Letzter Login</label>
    <type>DateTime</type>
</CustomField>