force-app/main/default/objects/Contact/fields/VPBenutzerLoginEmail__c.field-meta.xml
<CustomField>
    <fullName>VPBenutzerLoginEmail__c</fullName>
    <formula>CommunityUser__r.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VP Benutzer Login E-Mail</label>
    <type>Text</type>
</CustomField>