force-app/main/default/objects/Contact/fields/VPDateiUebersichtAbbestellen__c.field-meta.xml
<CustomField>
    <fullName>VPDateiUebersichtAbbestellen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VP Dateiübersicht abbestellen</label>
    <type>Checkbox</type>
</CustomField>