force-app/main/default/objects/Contact/fields/VPPasswortVergessenEmailSenden__c.field-meta.xml
<CustomField>
    <fullName>VPPasswortVergessenEmailSenden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VP Passwort vergessen E-Mail senden</label>
    <type>Checkbox</type>
</CustomField>