force-app/main/default/objects/Contact/fields/VPRollen__c.field-meta.xml
<CustomField>
    <fullName>VPRollen__c</fullName>
    <inlineHelpText>Auswirkung der Rollen: Provision -&gt; Benutzer sieht seine eigenen Provisionen. Alle Provisionen -&gt; Benutzer sieht alle Provisionen der Firma. Struktur anzeigen -&gt; Derzeit keine Auswirkung. Verkaufte Einheiten berechnen -&gt; Immobilien zeigen auch verkaufte Einheiten an. News ausblenden -&gt; Die News auf der Startseite werden ausgeblendet.</inlineHelpText>
    <label>VP Rollen</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Provision</fullName>
            </value>
            <value>
                <fullName>Verkaufte Einheiten berechnen</fullName>
            </value>
            <value>
                <fullName>News ausblenden</fullName>
            </value>
            <value>
                <fullName>Alle Provisionen</fullName>
            </value>
            <value>
                <fullName>Struktur anzeigen</fullName>
            </value>
            <value>
                <fullName>Benutzer simulieren</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>