force-app/main/default/objects/Contact/fields/WhatsApp_Widget_ausblenden__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_Widget_ausblenden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WhatsApp Widget ausblenden</label>
    <type>Checkbox</type>
</CustomField>