force-app/main/default/objects/Contact/fields/Wiedervorlage__c.field-meta.xml
<CustomField>
    <fullName>Wiedervorlage__c</fullName>
    <label>Wiedervorlage</label>
    <type>DateTime</type>
</CustomField>