force-app/main/default/objects/Contact/fields/WohnhaftSeit__c.field-meta.xml
<CustomField>
    <fullName>WohnhaftSeit__c</fullName>
    <label>Wohnhaft seit</label>
    <type>Date</type>
</CustomField>