force-app/main/default/objects/Contact/recordTypes/Interessent.recordType-meta.xml
<RecordType>
    <fullName>Interessent</fullName>
    <active>true</active>
    <label>Interessent</label>
</RecordType>