force-app/main/default/objects/Contact/recordTypes/Kunde.recordType-meta.xml
<RecordType>
    <fullName>Kunde</fullName>
    <active>true</active>
    <label>Kunde</label>
</RecordType>