force-app/main/default/objects/Contact/recordTypes/Makler.recordType-meta.xml
<RecordType>
    <fullName>Makler</fullName>
    <active>true</active>
    <description>Ansicht wenn der Kontakt ein Makler ist</description>
    <label>Mitarbeiter</label>
</RecordType>