force-app/main/default/objects/Contact/validationRules/Account_geaendert.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_geaendert</fullName>
    <active>false</active>
    <errorConditionFormula>/* BLOCKIERT: Änderung der Account-Verknüpfung (AccountId).
  ERLAUBT FÜR: Genehmigungsprozesse, spezifische Profile, 
               definierte Power-User &amp; Custom Permission.
*/

ISCHANGED(AccountId) &amp;&amp; 
In_Genehmigungsprozess__c == false &amp;&amp; 
NOT($Permission.ChangeContactAccount) &amp;&amp;

/* --- PROFIL AUSNAHMEN (Empfehlung: IDs durch Namen ersetzen) --- */
$User.ProfileId != &apos;00eb00000015urz&apos; &amp;&amp; 
$User.ProfileId != &apos;00e0X000001A72a&apos; &amp;&amp; 
$User.ProfileId != &apos;00e0X000000ds1P&apos; &amp;&amp;

/* --- AKTIVE POWER-USER (Ausnahmen laut Export) --- */
$User.Id != &apos;005b00000029D0o&apos; &amp;&amp; /* Anika Krüger */
$User.Id != &apos;005b0000001V30P&apos; &amp;&amp; /* System (Witte) */
$User.Id != &apos;005b0000000YQy4&apos; &amp;&amp; /* Harald Senftleben */
$User.Id != &apos;005Vi00000hPk25&apos; /* Peter Schröder */</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Nur bestimmte Benutzer sind hierzu befugt. Bitte melden Sie sich bei Ihrem Vertriebsmanager.</errorMessage>
</ValidationRule>