force-app/main/default/objects/Contact/validationRules/NurMaklerbetreuerKoennenSimulieren.validationRule-meta.xml
<ValidationRule>
    <fullName>NurMaklerbetreuerKoennenSimulieren</fullName>
    <active>true</active>
    <errorConditionFormula>!IsBlank(BenutzerSimulieren__c) &amp;&amp; !Ist_Maklerbetreuer_WH__c</errorConditionFormula>
    <errorDisplayField>BenutzerSimulieren__c</errorDisplayField>
    <errorMessage>Nur Maklerbetreuer können Benutzer simulieren</errorMessage>
</ValidationRule>