force-app/main/default/objects/Contact/listViews/Alle_Interessenten2.listView-meta.xml
<ListView>
    <fullName>Alle_Interessenten2</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.ADDRESS1_STREET</columns>
    <columns>CONTACT.ADDRESS1_ZIP</columns>
    <columns>CONTACT.ADDRESS1_CITY</columns>
    <columns>Kunden_Maklerschutz__c</columns>
    <columns>Kundenschutz__c</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Gesch_ftsbeziehung__c</field>
        <operation>equals</operation>
        <value>Interessent</value>
    </filters>
    <label>Alle Interessenten</label>
</ListView>