force-app/main/default/objects/Contact/listViews/Interne.listView-meta.xml
<ListView>
    <fullName>Interne</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>RolleVertriebsportal__c</columns>
    <columns>CalendlyUrl__c</columns>
    <columns>VertriebsportalFotoUrl__c</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ImVertriebsportalAnzeigen__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Makler</value>
    </filters>
    <label>Anzeigen im VP</label>
</ListView>