force-app/main/default/objects/Contact/listViews/Maklerzirkel.listView-meta.xml
<ListView>
    <fullName>Maklerzirkel</fullName>
    <columns>CONTACT.FIRST_NAME</columns>
    <columns>CONTACT.LAST_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.ADDRESS1_STREET</columns>
    <columns>CONTACT.ADDRESS1_ZIP</columns>
    <columns>CONTACT.ADDRESS1_CITY</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Kunden_Maklerschutz__c</columns>
    <columns>Kundenschutz__c</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Gesch_ftsbeziehung__c</field>
        <operation>equals</operation>
        <value>Kunde</value>
    </filters>
    <label>Maklerzirkel</label>
    <sharedTo>
        <role>Team_Maurice</role>
    </sharedTo>
</ListView>