force-app/main/default/objects/Contact/listViews/Meine_Kontakte_f_r_Asnchreiben.listView-meta.xml
<ListView>
    <fullName>Meine_Kontakte_f_r_Asnchreiben</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>Gesch_ftsbeziehung__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Gesch_ftsbeziehung__c</field>
        <operation>notEqual</operation>
        <value>,Kunde,Interessent,Mitarbeiter WH,Maklerbetreuer,Regional Direktor,Notar,Bank,Dienstleister,Anbahnung,Gekündigt vom WirtschaftsHaus,Gekündigt von Extern</value>
    </filters>
    <filters>
        <field>CONTACT.EMAIL</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Interessent</value>
    </filters>
    <label>Meine Kontakte für Asnchreiben</label>
</ListView>