force-app/main/default/objects/Contact/listViews/Meine_Makler.listView-meta.xml
<ListView>
    <fullName>Meine_Makler</fullName>
    <booleanFilter>1</booleanFilter>
    <columns>PARENT.NAME</columns>
    <columns>CONTACT.SALUTATION</columns>
    <columns>CONTACT.FIRST_NAME</columns>
    <columns>CONTACT.LAST_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Gesch_ftsbeziehung__c</columns>
    <columns>Account.Carestone_Vertriebsvereinbarung__c</columns>
    <columns>Account.keine_E_Mails__c</columns>
    <columns>Account.Vertriebskontakt_verboten_Interessent__c</columns>
    <columns>Account.Vertriebskontakt_verboten_Makler__c</columns>
    <columns>CONTACT.EMAIL_OPT_OUT</columns>
    <columns>Newsletter__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Gesch_ftsbeziehung__c</field>
        <operation>equals</operation>
        <value>Maklerbetreuer,Versicherungsmakler,Immobilienmakler,Regional Direktor,Bank,Dienstleister,Mitarbeiter,Anbahnung,Immobilien- oder Versicherungsmakler,Finanz- und Versicherungsmakler,Finanzmakler</value>
    </filters>
    <label>Alle Makler</label>
</ListView>